# azura-ai.github.io

./: about.html  blog.html  content.json  dashboard.html  docdrop.db  docdrop.html  facebook.html  footer.html  index.html  instagram.html  leads.html  leads_discovery_2026_04_04.md  linkedin.html  minify_assets.py  outreach_playbook.md  post.html  privacy.html  probe2.py  probe3.py  pyproject.toml  refresh_content.py  script.js  seo_agent.py  site_map.xml  sitemap.txt  sitemap.xml  study.html  style.css  style.min.css  test_ecommerce_bots.py  threads.html  topic_research_agent.py  vibe_topics.md
backend/: app.py  docdrop.py  ecommerce_langgraph_bot.py  ecommerce_pydantic_bot.py  requirements.txt
blogs/: 3-ecommerce-agent-pydantic-vs-langgraph.md  ai-fraud-detection-for-payment-processing-a-technical-guide.md  ai-powered-document-automation-for-european-healthcare.md  automating-insurance-card-verification-with-ocr-and-ai.md  best-ocr-software-in-2026-google-document-ai-vs-amazon-textract-vs-custom.md  gpt-5-vs-gemini-2-5-pro-vs-claude-4.md  how-to-automate-invoice-processing-with-ai-in-2026.md  how-to-automate-invoice-processing-with-ai-ocr-plus-llms.md  how-to-build-an-ai-chatbot-for-appointment-booking.md  langchain-vs-langgraph-vs-crewai-which-framework-for-ai-agents.md  multimodal-vibes-intent-driven-video-analysis-with-gemini-api.md  open-source-vs-proprietary-llms-cost-security-and-performance.md  schema-driven-dev-bulletproof-api-contracts-for-ai-led-teams.md  the-flash-stack-building-instant-ai-apps-with-google-gemini-api.md  (+1 more)
cases/: ai-marketing-outreach.md  (+8 more)
(+66 files in other folders)
