[project]
name = "client-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi[basic,standard,uvicorn]>=0.135.1",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.0",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "pydantic-ai>=1.70.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "resend>=2.25.0",
    "uvicorn>=0.42.0",
]
